/*
 * Copyright 2022 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.exec.ssh;

option java_package = "org.finos.tracdap.plugins.exec.ssh";
option java_multiple_files = true;


message SshBatchState {

  string remoteHost = 1;
  int32 remotePort = 2;
  string batchUser = 3;

  string batchDir = 4;
  repeated string volumes = 5;

  int64 pid = 6;
}


message SshExecutorState {


}
